--- a/app/templates/Team/addMember.latte
+++ b/app/templates/Team/addMember.latte
@@ -1,10 +1,43 @@
-{* Latte template *}
-
 {block content}
 
-<h1 n:block=title>{$nadpis}</h1>
+{include ../header.latte}
 
-<p><b>Popis tymu:</b> {$popisTymu}</p>
 
-{control memberForm}  
-    
+
+<div class="main">
+    {include ../menu.latte}
+    <section id="content">
+        <div class="wrapper">
+            <div class="container-fluid">
+                <div id="heading" class="page-header">
+                    <h1 n:block=title><i class="icon20 i-users"></i> {$nadpis} </h1>
+                </div>
+
+                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4><b>Popis tymu:</b> {$popisTymu}</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+
+                                        {control memberForm}  
+                                        
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                            </div><!-- End .span6  -->  
+                            
+                       </div>
+                                        
+                                        
+					
+                </div><!-- End .row-fluid  -->
+
+            </div> <!-- End .container-fluid  -->
+        </div> <!-- End .wrapper  -->
+{/block}      
+
