--- a/app/templates/Useredit/notFound.latte
+++ b/app/templates/Useredit/notFound.latte
@@ -1,12 +1,25 @@
-{* Latte template *}
-
 {block content}
 
-<h1 n:block=title>Nenalezeno!</h1>
 
-<p>Bohuzel system nenalezl pozadovane informace!<br/>
-	<a n:href="Useredit:usersList">Seznam uživatelů</a>
-	<br/>
-	<a href="{link Homepage:default}">Domů</a>
-</p>
-
+<header id="header" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner"/>
+</header> <!-- End #header  -->   
+    
+<div class="container-fluid">
+    <div id="login">
+        <div class="login-wrapper" data-active="log">
+            <div id="log">
+                <div class="page-header">
+                    <h3 class="center"></h3>
+                    <h3 class="center"> Nenalezeno! </h3>
+                </div>
+                    <div class="row-fluid">
+                        <p>Bohuzel system nenalezl pozadovane informace!<br/></p>
+                        <div class="full">
+                                <a href="{link Homepage:default}">Domů</a>
+                        </div>
+                    </div><!-- End .row-fluid  -->
+            </div>
+        </div>
+    </div>
+</div>
