--- a/app/templates/Version/notAllowed.latte
+++ b/app/templates/Version/notAllowed.latte
@@ -1,9 +1,27 @@
-{* Latte template *}
-
 {block content}
 
-<h1 n:block=title>Spatne opravneni</h1>
 
-<p>Nemate dostatecne opravneni k prohlizeni nebo editaci teto stranky!<br />
-    <a href="{link Homepage:default}">Domu</a>
-</p>
+<header id="header" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner"/>
+</header> <!-- End #header  -->   
+    
+<div class="container-fluid">
+    <div id="login">
+        <div class="login-wrapper" data-active="log">
+            <div id="log">
+                <div class="page-header">
+                    <h3 class="center"></h3>
+                    <h3 class="center"> Spatne opravneni! </h3>
+                </div>
+                    <div class="row-fluid">
+                        <p>Nemate dostatecne opravneni k prohlizeni nebo editaci teto stranky!<br/>
+                        <div class="full">
+                             <center><a href="{link Homepage:default}">Domů</a></center>
+                 
+                        </div>       
+                        </p>
+                    </div><!-- End .row-fluid  -->
+            </div>
+        </div>
+    </div>
+</div>
