--- a/app/templates/Request/editService.latte
+++ b/app/templates/Request/editService.latte
@@ -32,7 +32,7 @@
                                     </div><!-- End .widget-content -->
                                 </div><!-- End .widget -->
                             </div><!-- End .span6  -->  
-                            <a href="{link Request:services}">Zpet</a>
+                            <a class="btn" href="{link Request:services}">Zpet</a>
                        </div>
                                         
                                         
