--- a/app/templates/Useredit/usersProjectList.latte
+++ b/app/templates/Useredit/usersProjectList.latte
@@ -1,15 +1,52 @@
-{* Latte template *}
-
 {block content}
 
+{include ../header.latte}
 
-<p>
-	<h3>Projekty :</h3>
-		{foreach $projekty as $projekt}
-			<br>Projekt : {$projekt->popis}		{if $projekt->etapa == 'zahájení'}
-                                                    -> Projekt ještě nebyl zahájen
-                                                {else}    
-                                                    <a href="{link Version:version, $projekt->dokument_id}">Dokument k projektu</a>
-                                                {/if}
-		{/foreach}
-</p>	
+
+
+<div class="main">
+    {include ../menu.latte}
+    <section id="content">
+        <div class="wrapper">
+            <div class="container-fluid">
+                <div id="heading" class="page-header">
+                    <h1 n:block=title><i class="icon20 i-users"></i> Přidat projekt </h1>
+                </div>
+
+                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4>Projekt</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+
+                                    <p>
+                                            <h3>Projekty :</h3>
+                                                    {foreach $projekty as $projekt}
+                                                            <br>Projekt : {$projekt->popis}		{if $projekt->etapa == 'zahájení'}
+                                                                                        -> Projekt ještě nebyl zahájen
+                                                                                    {else}    
+                                                                                        <a href="{link Version:version, $projekt->dokument_id}">Dokument k projektu</a>
+                                                                                    {/if}
+                                                    {/foreach}
+                                    </p>	
+
+                                        
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                            </div><!-- End .span6  -->  
+                            
+                       </div>
+                                        
+                                        
+					
+                </div><!-- End .row-fluid  -->
+
+            </div> <!-- End .container-fluid  -->
+        </div> <!-- End .wrapper  -->
+{/block}      
