--- a/app/templates/Version/addPrompt.latte
+++ b/app/templates/Version/addPrompt.latte
@@ -1,6 +1,46 @@
+
 {* Latte template *}
 
 {block content}
-<h1 n:block=title>Pridat pripominku</h1>
 
-{control promptForm}
+{include ../header.latte}
+
+
+
+<div class="main">
+    {include ../menu.latte}
+    <section id="content">
+        <div class="wrapper">
+            <div class="container-fluid">
+                <div id="heading" class="page-header">
+                    <h1 n:block=title><i class="icon20 i-users"></i> Přidat připomínku </h1>
+                </div>
+
+                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4>Přidat připomínku</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+
+                                        {control promptForm}
+                                        
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                                <a class="btn" href="javascript:history.back()">Zpět</a>
+                            </div><!-- End .span6  -->  
+                            
+                       </div>
+                                        
+                                        
+					
+                </div><!-- End .row-fluid  -->
+
+            </div> <!-- End .container-fluid  -->
+        </div> <!-- End .wrapper  -->
+{/block}      
