--- a/app/templates/Version/editRequest.latte
+++ b/app/templates/Version/editRequest.latte
@@ -2,6 +2,44 @@
 
 {block content}
 
-<h1 n:block=title>Uprava pozadavku</h1>
+{include ../header.latte}
 
-{control editRequestForm}
+
+
+<div class="main">
+    {include ../menu.latte}
+    <section id="content">
+        <div class="wrapper">
+            <div class="container-fluid">
+                <div id="heading" class="page-header">
+                    <h1 n:block=title><i class="icon20 i-users"></i> Úprava pozadavku </h1>
+                </div>
+
+                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4>Úprava pozadavku</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+
+                                        {control editRequestForm}
+                                        
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                                <a class="btn" href="javascript:history.back()">Zpět</a>
+                            </div><!-- End .span6  -->  
+                            
+                       </div>
+                                        
+                                        
+					
+                </div><!-- End .row-fluid  -->
+
+            </div> <!-- End .container-fluid  -->
+        </div> <!-- End .wrapper  -->
+{/block}      
