--- a/app/templates/Project/projects.latte
+++ b/app/templates/Project/projects.latte
@@ -66,7 +66,7 @@
                                         </tbody>
                                     </table>
                                         <div style="text-align: center;">
-                                            <a href="{link Project:addProject}"><h3>Přidat novy projekt</h3></a>    
+                                            <a href="{link Project:addProject}"><h3>Přidat nový projekt</h3></a>    
                                         </div>
                                     </div><!-- End .widget-content -->
                                 </div><!-- End .widget -->
