--- a/app/templates/Useredit/detail.latte
+++ b/app/templates/Useredit/detail.latte
@@ -2,38 +2,97 @@
 
 {block content}
 
-<p> <h3>Kontakt :</h3>
-	<br>Jmeno : {$uzivatel->jmeno}</br> 
-	<br>Telefon: {$kontakt->telefon}
-	<br>Email: {$kontakt->email}
-	<br>Ulice: {$kontakt->ulice}
-	<br>Město: {$kontakt->mesto}
-	<br>PSČ: {$kontakt->psc}
-</p>
+{include ../header.latte}
 
 
-{if $isCustomer == FALSE}
-	<p>
-		<h3> Tymy : </h3>
-		{foreach $tymy as $tym}
-			<br>Tym : {$tym->tym->popis}  <a href="{link Team:detail, $tym->tym_id}">detail</a>
-		{/foreach} 
-	</p>
-{else}
-	<p>
-		<h3>Projekty :</h3>
-		{foreach $projekty as $projekt}
-			<br>Projekt : {$projekt->popis}		{if $projekt->etapa == 'zahájení'}
-                                                    -> Projekt ještě nebyl zahájen
-                                                {else}    
-                                                    <a href="{link Version:version, $projekt->dokument_id}">Dokument k projektu</a>
-                                                {/if}
-		{/foreach}
-	</p>	
-{/if}
 
-<p>
-	<a n:href="Useredit:usersList">Seznam uživatelů</a>
-	<br/>
-	<a href="{link Homepage:default}">Domu</a>
-</p>
+<div class="main">
+    {include ../menu.latte}
+    <section id="content">
+        <div class="wrapper">
+            <div class="container-fluid">
+                <div id="heading" class="page-header">
+                    <h1 n:block=title><i class="icon20 i-users"></i> Informace o uživateli </h1>
+                </div>
+
+                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4>Uživatel</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+
+                                        <p> <h3>Kontakt :</h3>
+                                                <br>Jmeno : {$uzivatel->jmeno}</br> 
+                                                <br>Telefon: {$kontakt->telefon}
+                                                <br>Email: {$kontakt->email}
+                                                <br>Ulice: {$kontakt->ulice}
+                                                <br>Město: {$kontakt->mesto}
+                                                <br>PSČ: {$kontakt->psc}
+                                        </p>
+
+
+                                        {if $isCustomer == FALSE}
+                                            <h3>Týmy :</h3>
+                                            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
+                                                <thead>
+                                                    <td>Tým</td>
+                                                    <td></td>
+                                                </thead>
+                                                <tbody>
+                                                    {foreach $tymy as $tym}
+                                                        <tr>
+                                                            <td>{$tym->tym->popis}</td>
+                                                            <td><a href="{link Team:detail, $tym->tym_id}">detail</a></td>
+                                                        </tr>
+                                                    {/foreach}
+                                                </tbody>    
+                                            </table>  
+                                        {else}
+                                            <h3>Projekty :</h3>
+                                            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
+                                                <thead>
+                                                    <td>Projekt</td>
+                                                    <td></td>
+                                                </thead>
+                                                <tbody>
+                                                    {foreach $projekty as $projekt}
+                                                        <tr>
+                                                            <td>{$projekt->popis}</td>
+                                                            <td>
+                                                            {if $projekt->etapa == 'zahájení'}
+                                                                -> Projekt ještě nebyl zahájen
+                                                            {else}    
+                                                                <a href="{link Version:version, $projekt->dokument_id}">Dokument k projektu</a>
+                                                            {/if}
+                                                            </td>
+                                                        </tr>
+                                                    {/foreach}
+                                                </tbody>    
+                                            </table>      
+                                        {/if}
+
+                                        <p>
+                                                
+                                                <br/>
+                                                
+                                        </p>
+                                        
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                            </div><!-- End .span6  -->  
+                            <a class="btn" href="{link Request:services}">Zpet</a>&nbsp;&nbsp;&nbsp;<a class="btn" n:href="Useredit:usersList">Seznam uživatelů</a>&nbsp;&nbsp;&nbsp;<a class="btn" href="{link Homepage:default}">Domů</a>
+                       </div>
+                                        
+                                        
+					
+                </div><!-- End .row-fluid  -->
+
+            </div> <!-- End .container-fluid  -->
+        </div> <!-- End .wrapper  -->
+{/block}      
