--- a/app/templates/Version/version.latte
+++ b/app/templates/Version/version.latte
@@ -69,9 +69,9 @@
                                             {/foreach}
                                             </p>
 
-
+                                            {if !isset($pripominky)}
                                             <h2>Pripominky</h2>
-                                            <table>
+                                            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
                                                 <thead>
                                                     <td>ID</td>
                                                     <td>Text</td>
@@ -85,6 +85,7 @@
                                                     {/foreach}
                                                 </tbody>    
                                             </table>
+                                            {/if}
                                             {if $aktualni}    
                                                 <a class="btn" href="{link Version:addPrompt, $verze->ID}">Pridat pripominku</a>
                                             {/if}
